JVM VirtualThread  项目pom修改，用于支持idea编译运行