@@ -11,6 +11,11 @@
 
     <artifactId>concurrent</artifactId>
 
+    <properties>
+        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -20,6 +25,44 @@
     </dependencies>
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <parameters>true</parameters>
+                    <release>16</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>16</source>
+                    <target>16</target>
+                    <parameters>true</parameters>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jvmArguments>--enable-preview -DvirtualThreads=true</jvmArguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -55,9 +98,9 @@
                     <target>14</target>
                 </configuration>
             </plugin>
-            <!-- Tomcat 8 Maven 插件用于构建可执行 war -->
-            <!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat8-maven-plugin -->
-            <!--<plugin>
+            &lt;!&ndash; Tomcat 8 Maven 插件用于构建可执行 war &ndash;&gt;
+            &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat8-maven-plugin &ndash;&gt;
+            &lt;!&ndash;<plugin>
                 &lt;!&ndash;<groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat8-maven-plugin</artifactId>
                 <version>3.0-r1655215</version>&ndash;&gt;
@@ -78,7 +121,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>&ndash;&gt;
         </plugins>
-    </build>
+    </build>-->
 </project>
